--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Hello World</title>
+  <title>Михаил Круг</title>
 </head>
 <body class="page">
   <header class="header">
-    <h1 class="header__title">Hello World!</h1>
   </header>
   <main class="main"></main>
   <footer class="footer"></footer>
