--- a/index.html
+++ b/index.html
@@ -1,17 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
-  <title>Михаил Круг</title>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
+    <title>Круг</title>
 </head>
-<body class="page">
-  <header class="header">
-  </header>
-  <main class="main"></main>
-  <footer class="footer"></footer>
-  <script src="./script/index.js"></script>
+
+<body>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <nav class="nav">
+                  <a class="link nav__link" href="#">Главная</a>
+                  <a class="link nav__link" href="#">Дискография</a>
+                  <a class="link nav__link" href="#">История</a>
+                  <a class="link nav__link" href="#">Магазин</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="intro">
+            <div class="container">
+                <div class="intro__inner">
+                    <h1 class="intro__suptitle">Михаил Круг</h1>
+                    <h2 class="intro__title">Памяти легендарного шансонье</h2>
+                    <a class="link button intro__button" href="#">Подробнее</a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="discography">
+                <div class="container">
+                    <h3 class="discography__title">ДИСКОГРАФИЯ</h3>
+                <div class = rows>
+
+                <div class = albums-row>
+                    <figure>
+                        <img src = "assets/images/limon.png" width = "240" height="240" alt="Жиган Лимон">
+                        <img src="assets/images/madam.png" width = "240" height="240" alt="Мадам">
+                        <img src="assets/images/studentka.png" width = "240" height="240" alt="Студентка">
+                        <img src="assets/images/prokuror.png" width = "240" height="240" alt="Зеленый прокурор">
+                    </figure>
+
+
+                </div>
+                <div class = albums-row>
+                    <figure>
+                        <img src = "assets/images/lirika.png" width = "240" height="240" alt="Лирика">
+
+                        <img src="assets/images/posvyashchenie.png" width = "240" height="240" alt="Посвящение">
+
+                        <img src="assets/images/devochkapai.png" width = "240" height="240" alt="Девочка пай">
+
+                        <img src="assets/images/myshka.png" width = "240" height="240" alt="Мышка">
+                    </figure>
+
+                </div>
+                <div class = albums-row>
+                    <figure>
+                        <img src = "assets/images/ispoved.png" width = "240" height="240" alt="Исповедь">
+
+                        <img src="assets/images/duety.png" width = "240" height="240" alt="Дуэты">
+
+                        <img src="assets/images/limon2.png" width = "240" height="240" alt="Жиган Лимон">
+
+                        <img src="assets/images/zhiganskiepesni.png" width = "240" height="240" alt="Жиганские песни">
+                    </figure>
+
+                </div>
+                </div>
+            </div>
+        </div>
+
+            <div class = biography>
+               <div class = container>
+                <h3 class = biography__title>БИОГРАФИЯ</h3>
+                <p class = biography__paragraph>Михаи&#769;л Влади&#769;мирович Круг&nbsp;&mdash; советский и&nbsp;российский певец, бард, шансонье и&nbsp;поэт. Являлся автором и&nbsp;исполнителем песен в&nbsp;жанре &laquo;русский шансон&raquo;, один из&nbsp;самых популярных представителей данного жанра. Поклонники называли его &laquo;королём русского шансона&raquo;. Автор и&nbsp;исполнитель лирической песни &laquo;Владимирский централ&raquo;, ставшей одним из&nbsp;самых известных образцов русского шансона. ночь с&nbsp;30&nbsp;июня на&nbsp;1&nbsp;июля 2002 года Михаил Круг подвергся нападению злоумышленников в&nbsp;собственном доме. Неизвестные преступники проникли в&nbsp;дом и&nbsp;сделали два выстрела в&nbsp;Круга, после которых тот на&nbsp;время потерял сознание. После нападения певец был доставлен в&nbsp;Тверскую городскую больницу &#8470;&nbsp;6, однако, несмотря на&nbsp;усилия врачей, Михаил Круг умер утром 1&nbsp;июля.</p>
+
+            </div>
+            </div>
+            <div class = "store">
+                <div class = "container">
+                    <h4 class = "store__title">МАГАЗИН</h4>
+                    <div class = "store-rows">
+                        <img src = "assets/images/limon2.png" width = "240" height="240" alt="Жиган лимон" class = "album-pic"><img src = "assets/images/plastinka.png" width = "280" height="290" alt="" class = "plastinka-pic">
+                        <img src = "assets/images/myshka.png" width = "240" height="240" alt="Мышка" class = "album-pic"><img src = "assets/images/plastinka.png" width = "280" height="290" alt="" class = "plastinka-pic">
+                        <div class = "row">
+                        <div class  = "price">3861 руб.</div>
+                        <div class= "price">3224 руб.</div>
+                        </div>
+                        <div class = "row">
+                          <div class = "subtitle">Мышка(LP)</div>
+                          <div class = "subtitle">Жиган лимон(LP)</div>
+                        </div>
+                        <div class = "row">
+                          <a class="store__button" href="#">Купить</a>
+                          <a class="store__button" href="#">Купить</a>
+                        </div>
+                        <img src = "assets/images/madam.png" width = "240" height="240" alt="Мадам" class = "album-pic"><img src = "assets/images/plastinka.png" width = "280" height="290" alt="" class = "plastinka-pic">
+                        <img src = "assets/images/duety.png" width = "240" height="240" alt="Дуэты" class = "album-pic"><img src = "assets/images/plastinka.png" width = "280" height="290" alt="" class = "plastinka-pic">
+                        <div class = "row">
+                          <div class  = "price">7560 руб.</div>
+                          <div class= "price">3861 руб.</div>
+                        </div>
+                          <div class = "row">
+                            <div class = "subtitle">Мадам(LP)</div>
+                            <div class = "subtitle">Дуэты(LP)</div>
+                          </div>
+                          <div class = "row">
+                            <a class="store__button" href="#">Купить</a>
+                            <a class="store__button" href="#">Купить</a>
+                          </div>
+                    </div>
+                    </div>
+
+                  </div>
+              </div>
+        </main>
+   <footer>
+          <p>1962-2002</p>
+    </footer>
 </body>
 </html>
